<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="WrappedComponentExample_Config" Id="{fd4a1fe1-dfce-0359-2456-da059d207f84}">
    <Declaration><![CDATA[TYPE WrappedComponentExample_Config EXTENDS TcoCore.TcoStruct:
STRUCT

	VacuumReachedStabilisation:TIME:=T#100MS;
	VacuumPushTime:TIME:=T#100MS;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>