<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="WrappedComponentExample_Control" Id="{381cd645-ffa5-0c7b-2bf4-2303d6818f94}">
    <Declaration><![CDATA[TYPE WrappedComponentExample_Control EXTENDS TcoCore.TcoStruct : 
STRUCT
    Setpoint : INT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>