<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="WrappedComponentsExample" Id="{36809ad4-1f46-0e34-2d5a-6426d18e2132}">
    <Declaration><![CDATA[TYPE WrappedComponentsExample EXTENDS TcoCore.TcoStruct : 
STRUCT
    {attribute addProperty Name "Manipulator"}
    Manipulator : TcoDrivesBeckhoff.TcoMultiAxis(THISSTRUCT);
    {attribute addProperty Name "Axis"}
    Axis : TcoDrivesBeckhoff.TcoSingleAxis(THISSTRUCT);
    {attribute addProperty Name "Drive"}
    Drive : TcoDrivesBeckhoff.TcoDriveSimple(THISSTRUCT);
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>